# midisf2player

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  midi.cpp
src/: file.cpp  file.hpp  main.cpp  main_fft.cpp  main_from_example.cpp  main_wav.cpp  midi_file.cpp  midi_file.hpp  midi_note_freq.hpp  sf2_file.cpp  sf2_file.hpp  sound_data.hpp
